# kserve

.github/workflows/: sklearnserver-docker-publish.yml
python/: sklearn.Dockerfile
python/kserve/: pyproject.toml
python/kserve/custom_wheels/: cryptography-43.0.1-cp37-abi3-linux_s390x.whl  websockets-13.0.1-cp311-cp311-linux_s390x.whl
python/sklearnserver/: pyproject.toml
python/sklearnserver/custom_wheels/: cryptography-43.0.3-cp37-abi3-linux_s390x.whl  websockets-14.2-cp311-cp311-linux_s390x.whl
