[tool.poetry]
name = "sklearnserver"
version = "0.15.0rc0"
description = "Model Server implementation for scikit-learn. Not intended for use outside KServe Frameworks Images."
authors = ["singhan <singhan@us.ibm.com>"]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"
readme = "README.md"
packages = [
    { include = "sklearnserver" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kserve = { path = "../kserve", extras = ["storage"], develop = true }
scikit-learn = {path = "custom_wheels/scikit_learn-1.5.1-cp311-cp311-linux_s390x.whl"}
joblib = "^1.4.0"
pandas = {path = "custom_wheels/pandas-2.2.2-cp311-cp311-linux_s390x.whl"}
numpy = {path = "custom_wheels/numpy-1.26.4-cp311-cp311-linux_s390x.whl"}
scipy = {path = "custom_wheels/scipy-1.13.1-cp311-cp311-linux_s390x.whl"}
cryptography = {path = "custom_wheels/cryptography-43.0.3-cp37-abi3-linux_s390x.whl"}
websockets = {path = "custom_wheels/websockets-14.2-cp311-cp311-linux_s390x.whl"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pytest-asyncio = ">=0.23.4, <1.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "~24.3.0", extras = ["colorama"] }

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
